--- a/src/assets/base/styles/base.scss
+++ b/src/assets/base/styles/base.scss
@@ -1,4 +1,5 @@
-@import "vars";
+//noinspection CssUnknownTarget
+@import "assets/vars.scss";
 html, body {
   height: 100%; width: 100%;
   overflow-x: hidden;
