--- a/src/assets/base/styles/base.scss
+++ b/src/assets/base/styles/base.scss
@@ -1,20 +1,13 @@
 //noinspection CssUnknownTarget
 @import "assets/vars.scss";
-
 html, body {
   height: 100%; width: 100%;
   overflow-x: hidden;
   padding-right: 0 !important;
   margin: 0;
-  background: $body-bg-color none !important;
+  background-color: #4a4a4a;
 }
 #app {
   max-width: $max-width;
   margin: 0 auto;
-}
-.auth.auth-bg-1{background-image: url('../../img/IMG_2940-2.jpg');}
-.page-body-wrapper {
-  -webkit-box-shadow: 0 0 $shadow-blur $shadow-spread rgba(0, 0, 0, 1);
-  -moz-box-shadow: 0 0 $shadow-blur $shadow-spread rgba(0, 0, 0, 1);
-  box-shadow: 0 0 $shadow-blur $shadow-spread rgba(0, 0, 0, 1);
 }
