--- a/src/apps/login/layout/login-page.layout.html
+++ b/src/apps/login/layout/login-page.layout.html
@@ -2,7 +2,7 @@
     <div class="container-fluid page-body-wrapper full-page-wrapper auth-page">
         <div class="content-wrapper d-flex align-items-center auth auth-bg-1 theme-one" >
             <div class="row w-100">
-                <div class="col-lg-12 mx-auto text-center mb-3">
+                <div id="logo" class="col-lg-12 mx-auto text-center mb-3">
                     <img class="img-fluid" src="./img/logo_isv.png"  alt="logo" style="background: #881c25; padding:0 40px 10px; border-radius: 4px; max-height: 100px">
                 </div>
                 <div class="col-lg-6 mx-auto mb-lg-0 mb-5">
