--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,18 +1,42 @@
 @import "vars.scss";
+
 html, body {
-  height: 100%; width: 100%;
+  height: 100%;
+  width: 100%;
   overflow-x: hidden;
   padding-right: 0 !important;
   margin: 0;
   background: $body-bg-color none !important;
 }
+
+// ugly hack to get img from njk files
+#logo img {
+  background-image: url('~assets/img/logo_isv.png')
+}
+
 #app {
   max-width: $max-width;
   margin: 0 auto;
 }
-.auth.auth-bg-1{background-image: url('~assets/img/IMG_2940-2.jpg');}
+
+.auth.auth-bg-1 {
+  background-image: url('~assets/img/IMG_2940-2.jpg');
+}
+
 .page-body-wrapper {
   -webkit-box-shadow: 0 0 $shadow-blur $shadow-spread rgba(0, 0, 0, 1);
   -moz-box-shadow: 0 0 $shadow-blur $shadow-spread rgba(0, 0, 0, 1);
   box-shadow: 0 0 $shadow-blur $shadow-spread rgba(0, 0, 0, 1);
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: $main-color;
+  border-color: $main-color;
+}
+
+.btn-primary:hover, .btn-primary:not(:disabled):not(.disabled):active, .btn-primary.focus, .btn-primary:focus {
+  color: #fff;
+  background-color: rgba($main-color, 0.9);
+  border-color: $main-color;
 }
