Ugly but displayed calendar todo : __API__ as var Reload dev server in same tab ?

--- a/src/apps/speaker/layout/speaker-page.layout.html
+++ b/src/apps/speaker/layout/speaker-page.layout.html
@@ -16,7 +16,7 @@
                 </div>
             </nav>
             <div class="d-flex flex-column bd-highlight mt-5">
-                <div class="PublicPlanningLayout"></div>
+                <div class="planning"></div>
             </div>
         </div>
     </div>
