--- a/src/assets/styles/overrides/full-calendar.scss
+++ b/src/assets/styles/overrides/full-calendar.scss
@@ -1,5 +1,5 @@
 @import "~assets/styles/vars.scss";
-.fc { font-size: 0.8em; }
+body .fc { font-size: 0.8em; }
 .fc-toolbar h2{font-size: 1em; line-height: 1em;}
 
 .fc-delete {
