--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar default-layout col-12 p-0 fixed-top d-flex flex-row" style="padding: 2%">
     <div class="text-center navbar-brand-wrapper d-flex align-items-top justify-content-center" >
         <a class="logo" href="javascript:">
-            <img class="img-fluid ml-2" src="../assets/img/logo_isv.png" alt="logo">
+            <img class="img-fluid ml-2" src="/img/logo_isv.png" alt="logo">
         </a>
     </div>
     <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
