ça roxxx ! todo : __API__ as var

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,3 @@
-<div>
-    <div v-if="$route.matched.length">
-        <router-view></router-view>
-    </div>
-</div>
+<router-view  v-if="$route.matched.length" ></router-view>
+
 
