--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -14,7 +14,7 @@ html, body {
   background-image: url('~assets/img/logo_isv.png')
 }
 
-#app {
+.content-wrapper {
   max-width: $max-width;
   margin: 0 auto;
 }
