play with transition todo : __API__ as var

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,11 @@
-<router-view  v-if="$route.matched.length" ></router-view>
+<full-page>
+    <template slot="content">
+        <transition name="fade" mode="out-in">
+            <router-view v-if="$route.matched.length"></router-view>
+        </transition>
+    </template>
+</full-page>
+
+
 
 
