--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -40,3 +40,10 @@ html, body {
   background-color: rgba($main-color-2, 0.7);
   border-color: $main-color;
 }
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity 0.1s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
