--- a/src/app/speaker/page.layout.html
+++ b/src/app/speaker/page.layout.html
@@ -1,9 +1,7 @@
 <main-page>
     <template slot="content">
         <card-c :data="planningCard">
-            <template slot="card-body"><calendar-w /></template>
+            <template slot="card-body"><calendar-w :component$="calendarComponent$"/></template>
         </card-c>
     </template>
 </main-page>
-
-
