Admin App start todo : __API__ as var

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,3 +1,5 @@
-#app {
-  background-color: aquamarine;
+@import "vars";
+@import "./overrides/nav-bar";
+.page-body-wrapper {
+  max-width: $max-width;
 }
