--- a/src/app/login/page.layout.html
+++ b/src/app/login/page.layout.html
@@ -1,26 +1,34 @@
-<div class="row w-100">
-    <div id="logo" class="col-lg-12 mx-auto text-center mb-3">
-        <img class="img-fluid" src="/img/logo_isv.png" alt="logo"
-             style="background: #881c25; padding:0 40px 10px; border-radius: 4px; max-height: 100px">
-    </div>
-    <div class="col-lg-6 mb-lg-0 mb-5">
-        <div class="auto-form-wrapper pt-3">
-            <h2 class="text-center mb-4">Se connecter</h2>
-            <login-form-c></login-form-c>
-            <div class="form-group d-flex justify-content-between">
-                <a href="/mon-compte/de-passe-oublie/" class="text-small forgot-password text-black">
-                    Mot de passe oublié ?
-                </a>
+<div class="container-scroller">
+    <div class="container-fluid page-body-wrapper full-page-wrapper auth-page">
+        <div class="content-wrapper d-flex align-items-center auth auth-bg-1 theme-one">
+            <div class="row w-100">
+                <div id="logo" class="col-lg-12 mx-auto text-center mb-3">
+                    <img class="img-fluid" src="/img/logo_isv.png" alt="logo"
+                         style="background: #881c25; padding:0 40px 10px; border-radius: 4px; max-height: 100px">
+                </div>
+                <div class="col-lg-6 mb-lg-0 mb-5">
+                    <div class="auto-form-wrapper pt-3">
+                        <h2 class="text-center mb-4">Se connecter</h2>
+                        <login-form-c></login-form-c>
+                        <div class="form-group d-flex justify-content-between">
+                            <a href="/mon-compte/de-passe-oublie/" class="text-small forgot-password text-black">
+                                Mot de passe oublié ?
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-lg-0 mb-5">
+                    <div class="auto-form-wrapper pt-3">
+                        <h2 class="text-center mb-4">Première visite ?</h2>
+                        <register-form-c></register-form-c>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="col-lg-6 mb-lg-0 mb-5">
-        <div class="auto-form-wrapper pt-3">
-            <h2 class="text-center mb-4">Première visite ?</h2>
-            <register-form-c></register-form-c>
-        </div>
-    </div>
 </div>
+
+
 
 
 
