Admin App menu start todo : __API__ as var

--- a/src/app/admin/page.layout.html
+++ b/src/app/admin/page.layout.html
@@ -1,5 +1,6 @@
-<admin-page>
+<menu-page>
+    <main-menu slot="menu" />
     <template slot="content">
         PAGE ADMIN !!!!
     </template>
-</admin-page>
+</menu-page>
