--- a/src/layouts/menu-page.html
+++ b/src/layouts/menu-page.html
@@ -1,7 +1,7 @@
 <div class="container-scroller">
     <header-c></header-c>
     <div class="container-fluid page-body-wrapper">
-        <nav class="sidebar sidebar-offcanvas" id="sidebar"></nav>
+        <slot name="menu"></slot>
         <div class="main-panel">
             <div class="content-wrapper">
                 <div id="dynamicContent" class="col-12 grid-margin">
