main menu todo : __API__ as var

--- a/src/app/admin/page.layout.html
+++ b/src/app/admin/page.layout.html
@@ -1,6 +1,6 @@
 <menu-page>
     <main-menu slot="menu" />
     <template slot="content">
-        PAGE ADMIN !!!!
+        <router-view></router-view>
     </template>
 </menu-page>
