--- a/src/app/admin/main-menu.html
+++ b/src/app/admin/main-menu.html
@@ -1,3 +1,6 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
-
+    <ul>
+        <li><router-link to="/formations">Formations</router-link></li>
+        <li><router-link to="/intervenants">Intervenants</router-link></li>
+    </ul>
 </nav>
