--- a/src/app/admin/page.layout.html
+++ b/src/app/admin/page.layout.html
@@ -1,5 +1,5 @@
 <menu-page>
-    <main-menu slot="menu" />
+    <main-menu slot="menu" :routes="routes"/>
     <template slot="content">
         <router-view></router-view>
     </template>
