--- a/src/components/main-menu.html
+++ b/src/components/main-menu.html
@@ -2,19 +2,19 @@
     <ul class="nav hover-animate">
         <li class="nav-item" v-for="route in routes" >
             <router-link :to="route.path" class="nav-link">
-                <i v-if="route.meta && route.meta.icon" :class="'fa ' + route.meta.icon"> </i>
+                <i v-if="route.meta.icon" :class="'fa ' + route.meta.icon"> </i>
                 <span class="menu-title">{{route.name}}</span>
-                <i v-if="route.children && route.children.length" class="menu-arrow"></i>
+                <i v-if="routeApiChildren(route)" :class="{'menu-arrow': true, 'rotate': match(route)}" ></i>
             </router-link>
-            <div :class="{'collapse': true, 'show': match(route)}" v-if="route.children && route.children[1] && route.children[1].meta.elements" >
+            <b-collapse v-if="routeApiChildren(route)" :visible="match(route)" >
                 <ul class="nav flex-column sub-menu" >
-                    <li class="nav-item" v-for="element in route.children[1].meta.elements" >
+                    <li class="nav-item" v-for="element in routeApiChildren(route)" >
                         <router-link :to="route.path + '/' + route.children[1].path.replace(':identifier', element.identifier)" class="nav-link">
                             {{element.label}}
                         </router-link>
                     </li>
                 </ul>
-            </div>
+            </b-collapse>
         </li>
     </ul>
 </nav>
