Datatable Editable string todo : __API__ as var

--- a/src/app/admin/formation/list.layout.html
+++ b/src/app/admin/formation/list.layout.html
@@ -9,4 +9,7 @@
             </a>
         </div>
     </template>
+    <template slot="card-body" >
+        <div ref="table">TOTO</div>
+    </template>
 </card-c>
