--- a/src/modules/DataTable/style.css
+++ b/src/modules/DataTable/style.css
@@ -1,5 +1,3 @@
-@import "~datatables.net-bs4/css/dataTables.bootstrap4.css";
-
 .dataTables_wrapper th.align-center {
     text-align: center
 }
@@ -138,5 +136,9 @@
     padding: 6px !important;
 }
 
+.animate {
+    -webkit-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+}
 
 
