Datatable Wrapper todo : __API__ as var

--- a/src/app/admin/formation/list.layout.html
+++ b/src/app/admin/formation/list.layout.html
@@ -10,6 +10,6 @@
         </div>
     </template>
     <template slot="card-body" >
-        <div ref="table">TOTO</div>
+        <list-w :component$="listComponent$" />
     </template>
 </card-c>
