Select Ok todo : __API__ as var

--- a/src/app/admin/formation/trainings.layout.html
+++ b/src/app/admin/formation/trainings.layout.html
@@ -3,7 +3,7 @@
         <b-tab title="Cours" active>
             <b-card>
                 <b-card-body>
-
+                    <list-w :component$="trainingListComponent$" />
                 </b-card-body>
             </b-card>
 
