--- a/src/app/admin/formation/trainings.layout.html
+++ b/src/app/admin/formation/trainings.layout.html
@@ -2,17 +2,12 @@
     <b-tabs>
         <b-tab title="Cours" active>
             <b-card>
-                <b-card-body>
-                    <list-w :component$="trainingListComponent$" />
-                </b-card-body>
+                <list-w :component$="trainingListComponent$"/>
             </b-card>
-
         </b-tab>
-        <b-tab title="Modules"><b-card>
-            <b-card-body>
-
-            </b-card-body>
-        </b-card>
+        <b-tab title="Modules">
+            <b-card>
+            </b-card>
         </b-tab>
     </b-tabs>
 </div>
