List Modules todo : __API__ as var

--- a/src/app/admin/formation/trainings.layout.html
+++ b/src/app/admin/formation/trainings.layout.html
@@ -2,11 +2,12 @@
     <b-tabs>
         <b-tab title="Cours" active>
             <b-card>
-                <list-w :component$="trainingListComponent$"/>
+                <list-w :component$="trainingList$"/>
             </b-card>
         </b-tab>
         <b-tab title="Modules">
             <b-card>
+               <!-- <list-w :component$="moduleList$"/> -->
             </b-card>
         </b-tab>
     </b-tabs>
