Formations Infos todo : __API__ as var

--- a/src/app/admin/formation/trainings.layout.html
+++ b/src/app/admin/formation/trainings.layout.html
@@ -7,7 +7,7 @@
         </b-tab>
         <b-tab title="Modules">
             <b-card>
-               <!-- <list-w :component$="moduleList$"/> -->
+               <list-w :component$="moduleList$"/>
             </b-card>
         </b-tab>
     </b-tabs>
