All Vacations list todo : __API__ as var

--- a/src/app/admin/formation/infos.layout.html
+++ b/src/app/admin/formation/infos.layout.html
@@ -12,7 +12,7 @@
         </b-tab>
         <b-tab title="Périodes off">
             <b-card>
-
+                <list-w :component$="vacationList$" />
             </b-card>
         </b-tab>
     </b-tabs>
