--- a/src/app/admin/formation/infos.layout.html
+++ b/src/app/admin/formation/infos.layout.html
@@ -10,9 +10,12 @@
 
             </b-card>
         </b-tab>
-        <b-tab title="Périodes off">
-            <b-card>
+        <b-tab title="Périodes off" lazy>
+            <b-card class="card-rounded">
                 <list-w :component$="vacationList$" />
+            </b-card>
+            <b-card class="mt-3 card-rounded"  header="Calendrier prévisionnel">
+                <calendar-w :component$="provisionalCalendar$" />
             </b-card>
         </b-tab>
     </b-tabs>
