--- a/src/assets/styles/overrides/boostrap.scss
+++ b/src/assets/styles/overrides/boostrap.scss
@@ -65,15 +65,21 @@ ul.hover-animate .show ul, ul.hover-animate .collapsing ul {
 
   /** border-bottom: solid 1px $main-color; **/
 }
-.card {
-  border: solid 1px rgba($main-color, 0.3);
-  background-color: #fff;
-}
+
 .breadcrumb-item + .breadcrumb-item, .breadcrumb-item + .breadcrumb-item::before  {
   padding-left: 0.2rem;
 }
 .breadcrumb-item + .breadcrumb-item::before {
   padding-right: 0.2rem;
 }
-.tab-content .card { border-top: none; border-color: #dee2e6}
+.card {
+  border: solid 1px #dee2e6;
+  background-color: #fff;
+}
+.tab-pane > .card {
+  border-top: none;
+}
+.tab-pane > .card.card-rounded {
+  border-radius: 0 0 5px 5px;
+}
 .nav-tabs .nav-link.active {font-weight: normal; color: $main-color;}
