Home DashBoards todo : __API__ as var

--- a/src/app/admin/formation/planning/planning.layout.html
+++ b/src/app/admin/formation/planning/planning.layout.html
@@ -6,7 +6,7 @@
                 <training-draggable-list ref="trainingList" @speaker="speaker_.next($event)"/>
             </div>
             <div class="col-9">
-                <calendar-w :component$="planning$" :params="{speaker$: speaker$}"/>
+                <calendar-w :component$="planning$" :params="{speaker_: speaker_}"/>
             </div>
         </div>
     </b-card>
