Debug todo : __API__ as var

--- a/src/app/admin/home/scores/scores.layout.html
+++ b/src/app/admin/home/scores/scores.layout.html
@@ -12,7 +12,8 @@
                     </ol>
                 </nav>
             </template>
-            <spate-list ref="spateList" @select="select($event)" />
+            <spate-list v-show="data.training === null" ref="spateList" @select="select($event)" />
+            <
         </b-card>
     </div>
 </div>
