--- a/src/app/admin/trainee/absences/absences.layout.html
+++ b/src/app/admin/trainee/absences/absences.layout.html
@@ -1,26 +1,33 @@
 <div class="col-12">
     <div class="row">
         <div class="col-12">
-        <b-tabs>
-            <b-tab title="Absences" active>
-                <b-card class="card-rounded">
-                    <list-w :component$="absenceList$">
-                        <template slot="moreButton">
-                            <button class="btn btn-light btn-rounded" @click="$router.push('/home/absences/synthesis')"><< Récapitulatif</button>
-                        </template>
-                    </list-w>
-                </b-card>
-            </b-tab>
-            <b-tab title="Retards">
-                <b-card class="card-rounded">
-                    <list-w :component$="delayList$">
-                        <template slot="moreButton">
-                            <button class="btn btn-light btn-rounded" @click="$router.push('/home/absences/synthesis')"><< Récapitulatif</button>
-                        </template>
-                    </list-w>
-                </b-card>
-            </b-tab>
-        </b-tabs>
+            <b-tabs>
+                <b-tab title="Absences" active>
+                    <b-card class="card-rounded">
+                        <list-w :component$="absenceList$">
+                            <template slot="moreButton">
+                                <button class="btn btn-light btn-rounded"
+                                        @click="$router.push('/home/absences/synthesis')"><i class="fa fa-list"></i>
+                                    Récapitulatif
+                                </button>
+                            </template>
+                        </list-w>
+                    </b-card>
+                </b-tab>
+                <b-tab title="Retards">
+                    <b-card class="card-rounded">
+                        <list-w :component$="delayList$">
+                            <template slot="moreButton">
+                                <button class="btn btn-light btn-rounded"
+                                        @click="$router.push('/home/absences/synthesis')"><i class="fa fa-list"></i>
+                                    Récapitulatif
+                                </button>
+                            </template>
+                        </list-w>
+                    </b-card>
+                </b-tab>
+            </b-tabs>
+
         </div>
     </div>
 </div>
