Averages todo : __API__ as var

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,5 +1,6 @@
 @import "vars";
 @import "./overrides/boostrap";
+@import "./overrides/datatables";
 @import "./overrides/nav-bar";
 .page-body-wrapper {
   max-width: $max-width;
